--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "homepage": "https://github.com/401-js-WesamAlmasri/basic-auth#readme",
   "devDependencies": {
+    "@code-fellows/supergoose": "^1.1.0",
     "jest": "^26.6.3",
     "supertest": "^6.1.3"
   }
